# zebrafish

./: .gitignore  Config.in  GEMINI.md  INSTALL.md  README.md  device-table.txt  draft.sh  external.desc  external.mk  post-fakeroot-cleanup.sh  post-fakeroot-headless.sh  post-fakeroot.sh  users.txt  zebrafish-version.env
.github/: build.yml_disabled  hetzner.yml_disabled
.github/workflows/: build.yml  hetzner.yml
board/pc/: busybox.config  linux_aarch64.config  linux_x64.config  post-build.sh  post-image.sh
buildroot-packages/cni-plugins/: cni-plugins.mk
buildroot-packages/containerd/: Config.in  containerd.mk
buildroot-patches/: 0001-add-zfs-to-linux.patch
buildroot-scripts/: build.sh  clean.sh  config.sh  download.sh  patch.sh  prepare-artifacts.sh  prepare-cache.sh  redownload.sh  test.sh
configs/: zebrafish_aarch64_defconfig  zebrafish_x64_defconfig
dissertation/: .gitignore  GEMINI.md  README.md  abstract.tex  appendices.tex  bibliography.bib  build.sh  chapter0_introduction.tex  chapter1_software.tex  chapter2_specification.tex  chapter3_architecture.tex  chapter4_interface.tex  chapter5_measurements.tex  chapter6_final.tex  create_zip.py  dolgozat.tex
package/zebrafish-config/: Cargo.toml  Config.in  README.md  zebrafish-config.mk
package/zebrafish-config/src/: add.rs  cli.rs  edit.rs  efi.rs  get.rs  list.rs  load.rs  main.rs  path.rs  remove.rs  schema.rs  set.rs  store.rs  validate.rs
package/zebrafish-config/tests/: get.rs  list.rs  write.rs
package/zebrafish-dns/: Cargo.toml  Config.in  zebrafish-dns.mk
package/zebrafish-dns/config/: zebrafish-dns.toml
package/zebrafish-dns/src/: cache.rs  config.rs  doh.rs  lib.rs  main.rs  nss.rs  query_log.rs  server.rs
package/zebrafish-dns/tests/: integration.rs
rootfs-overlay/: init
(+181 files in other folders)
