[package]
name = "zebrafish-config"
version = "0.1.0"
edition = "2021"
description = "Configuration management tool for Zebrafish"
license = "MIT"
publish = false

[[bin]]
name = "zebrafish-config"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "1"
toml_edit = "0.22"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
serde_json = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
