[package]
name = "zebrafish-dns"
version = "0.1.0"
edition = "2021"
description = "DNS over HTTPS proxy server for Zebrafish"
license = "MIT"

[[bin]]
name = "zebrafish-dns"
path = "src/main.rs"

[lib]
name = "zebrafish_dns"
path = "src/lib.rs"

[dependencies]
hickory-proto = "0.25"
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["client", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "client-legacy", "http2"] }
hyper-rustls = { version = "0.27", features = ["http2", "webpki-tokio"] }
http-body-util = "0.1"
bytes = "1"
rustls = "0.23"
webpki-roots = "0.26"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lru = "0.12"
libc = "0.2"
nix = { version = "0.29", features = ["net", "socket"] }
tower-service = "0.3"

[dev-dependencies]
tokio-test = "0.4"

[[test]]
name = "integration"
path = "tests/integration.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
